--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -51,6 +51,7 @@
 @import './elements/all.scss';
 @import './elements/button.scss';
 @import './elements/html.scss';
+@import './elements/img.scss';
 @import './elements/inputs.scss';
 
 @import './elements/_a.scss';
@@ -70,6 +71,7 @@
 @import './objects/_page-transition.scss';
 @import './objects/_title.scss';
 @import './objects/_video.scss';
+@import './objects/_window95.scss';
 
 //Components
 @import './components/_app.scss';
