--- a/public/styles/elements/_headings.scss
+++ b/public/styles/elements/_headings.scss
@@ -11,3 +11,22 @@
 h1,h2,h3,h4,h5,h6 {
   font-family: $s-font--stack-headings;
 }
+
+h1 {
+  font-size: 2.5em;
+}
+h2 {
+  font-size: 2em;
+}
+h3 {
+  font-size: 1.5em;
+}
+h4 {
+  font-size: 1.25em;
+}
+h5 {
+  font-size: 1em;
+}
+h6 {
+  font-size: 0.75em;
+}
