Styling Contact Page

--- a/public/styles/pages/_contact-page.scss
+++ b/public/styles/pages/_contact-page.scss
@@ -10,6 +10,7 @@
 .p-contact-page {
   background-color: #37085E;
   background-image: url('./../images/patterns/arcade.svg');
+  background-size: 150% auto;
 
   &__message-element {
     resize: none;
