--- a/public/styles/pages/_contact-page.scss
+++ b/public/styles/pages/_contact-page.scss
@@ -9,8 +9,8 @@
  */
 .p-contact-page {
   background-color: #37085E;
-  background-image: url('./../images/patterns/arcade.svg');
-  background-size: 150% auto;
+  background-image: url('./../images/patterns/lemon-triangle.svg');
+  background-size: 75% auto;
 
   &__message-element {
     resize: none;
