--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -91,6 +91,7 @@
 @import './pages/_about-page.scss';
 @import './pages/_contact-page.scss';
 @import './pages/_home-page.scss';
+@import './pages/_privacy-policy-page.scss';
 
 //Utilities
 @import './utilities/text-align.scss';
