--- a/public/styles/settings/colors.scss
+++ b/public/styles/settings/colors.scss
@@ -47,6 +47,10 @@ $s-color--menu__background: rgba(0, 0, 0, 0.8);
 //loader
 $s-color--loader: $s-color--swatch-blue;
 
+//Footer Colors
+$s-color--footer__link: black;
+$s-color--footer__link-hover: white;
+
 /*** Buttons and Inputs ***/
 
 //Defaults
