--- a/public/styles/tools/_shadow.scss
+++ b/public/styles/tools/_shadow.scss
@@ -15,3 +15,8 @@
     $s-color--shadow
   );
 }
+
+
+%t-dp--shadow-3d {
+  @include t-box-shadow(0px, 1.5em, 1.5em, 0px, rgba(0, 0, 0, 0.25), true);
+}
