Implemented an example modal

--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -68,6 +68,7 @@
 @import './objects/_form.scss';
 @import './objects/_input.scss';
 @import './objects/_loader.scss';
+@import './objects/_modal.scss';
 @import './objects/_page-transition.scss';
 @import './objects/_title.scss';
 @import './objects/_video.scss';
