--- a/public/styles/settings/z.scss
+++ b/public/styles/settings/z.scss
@@ -10,4 +10,5 @@ $s-z--background: -1;   //Background Element
 $s-z--navbar: 10;       //Navbar
 $s-z--menu: 15;         //Hamburger Menu
 $s-z--menu-button: 16;  //Button to toggle menu.
+$s-z--modal: 100;       //Modals
 $s-z--transition: 1;    //The Z-Index of an element in transition
