Added loading feedback for images.

--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -66,6 +66,7 @@
 @import './objects/_floating-content-box.scss';
 @import './objects/_form.scss';
 @import './objects/_input.scss';
+@import './objects/_loadable-image.scss';
 @import './objects/_loader.scss';
 @import './objects/_modal.scss';
 @import './objects/_page-transition.scss';
