--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -61,6 +61,7 @@
 //Objects
 @import './objects/_background.scss';
 @import './objects/_button.scss';
+@import './objects/_box-sizer.scss';
 @import './objects/_content-box.scss';
 @import './objects/_element-scroll-fader.scss';
 @import './objects/_floating-content-box.scss';
