--- a/public/styles/pages/_contact-page.scss
+++ b/public/styles/pages/_contact-page.scss
@@ -9,7 +9,7 @@
  */
 .p-contact-page {
   background-color: #37085E;
-  background-image: url('./../images/patterns/lemon-triangle.svg');
+  background-image: url($s-asset--directory+'images/patterns/lemon-triangle.svg');
   background-size: 75% auto;
 
   &__message-element {
