--- a/public/styles/components/_app.scss
+++ b/public/styles/components/_app.scss
@@ -8,14 +8,4 @@
  *  Version:
  *    1.0.0 - 2018/05/03
  */
-.c-app {
-  position: relative;
-  height: 100vh;
-  width: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden;
-
-  &.is-modal-open {
-    overflow: hidden;
-  }
-}
+.c-app {}
