--- a/public/styles/components/_main.scss
+++ b/public/styles/components/_main.scss
@@ -5,10 +5,4 @@
  *  Version:
  *    1.0.0 - 2018/05/07
  */
-.c-main {
-  min-height: 100vh;
-  width: 100%;
-
-  @extend %t-flexbox;
-  @include t-flex-direction(column);
-}
+.c-main {}
