Cleaned Footer Code, beginning to compontentize SCSS

--- a/public/components/footer/Footer.scss
+++ b/public/components/footer/Footer.scss
@@ -20,7 +20,7 @@ $c-footer--link-hover-color: blue;
   padding-bottom: 10em;
   position: relative;
   overflow: hidden;
-  background-image: url($s-asset--directory+'images/banners/palms.svg');
+  background-image: url('@images/banners/palms.svg');
   background-size: cover;
 
   &__inner {
