--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -21,6 +21,14 @@
 // OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 // WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
+/*
+ *  Global Stylesheet
+ *    Global stylesheet provides tools and common utilities for use throughout
+ *    all stylesheets. This includes settings, mixins and pseudo-classes.
+ *
+ *  Version:
+ *    1.0.0 - 2018/10/23
+ */
 @charset "UTF-8";
 
 //Settings
@@ -45,62 +53,3 @@
 @import './tools/_absolute-centering.scss';
 @import './tools/_input.scss';
 @import './tools/_shadow.scss';
-
-//Resets
-
-//Elements
-@import './elements/all.scss';
-@import './elements/button.scss';
-@import './elements/html.scss';
-@import './elements/img.scss';
-@import './elements/inputs.scss';
-
-@import './elements/_a.scss';
-@import './elements/_body.scss';
-@import './elements/_headings.scss';
-
-//Objects
-@import './objects/_background.scss';
-@import './objects/_button.scss';
-@import './objects/_box-sizer.scss';
-@import './objects/_content-box.scss';
-@import './objects/_element-scroll-fader.scss';
-@import './objects/_floating-content-box.scss';
-@import './objects/_form.scss';
-@import './objects/_input.scss';
-@import './objects/_loadable-image.scss';
-@import './objects/_loader.scss';
-@import './objects/_modal.scss';
-@import './objects/_page-transition.scss';
-@import './objects/_title.scss';
-@import './objects/_video.scss';
-@import './objects/_window95.scss';
-
-//Components
-@import './components/_app.scss';
-@import './components/_body-section.scss';
-@import './components/_clear-section.scss';
-@import './components/_footer.scss';
-@import './components/_hamburger-menu.scss';
-@import './components/_image-section.scss';
-@import './components/_main.scss';
-@import './components/_navbar.scss';
-@import './components/_page.scss';
-@import './components/_section.scss';
-@import './components/_split-section.scss';
-@import './components/_video-section.scss';
-
-//Pages
-@import './pages/_contact-page.scss';
-@import './pages/_home-page.scss';
-@import './pages/_privacy-policy-page.scss';
-
-//Utilities
-@import './utilities/text-align.scss';
-
-@import './utilities/_responsive.scss';
-
-//Vendor
-@import './vendor/_fonts.scss';
-
-//Trumps
