Working a bit on footer and hamburger cleanup, trying to find a nice standard.

--- a/public/components/footer/Footer.scss
+++ b/public/components/footer/Footer.scss
@@ -11,6 +11,8 @@
  *  Version:
  *    1.0.0 - 2018/05/16
  */
+@import '@styles/global';
+
 $c-footer--link-color: red;
 $c-footer--link-hover-color: blue;
 
