Cleaned more code, still untested.

--- a/public/components/App.scss
+++ b/public/components/App.scss
@@ -8,6 +8,8 @@
  *  Version:
  *    1.0.0 - 2018/05/03
  */
+@import '~@styles/global';
+
 .c-app {
   overflow-x: hidden;//Temporary until I find time to find the overflowing element
 }
