--- a/public/components/footer/Footer.scss
+++ b/public/components/footer/Footer.scss
@@ -11,7 +11,7 @@
  *  Version:
  *    1.0.0 - 2018/05/16
  */
-@import '@styles/global';
+@import '~@styles/global';
 
 $c-footer--link-color: red;
 $c-footer--link-hover-color: blue;
@@ -22,7 +22,7 @@ $c-footer--link-hover-color: blue;
   padding-bottom: 10em;
   position: relative;
   overflow: hidden;
-  background-image: url('@images/banners/palms.svg');
+  background-image: url('~@assets/images/banners/palms.svg');
   background-size: cover;
 
   &__inner {
