--- a/public/components/section/layout/ClearSection.scss
+++ b/public/components/section/layout/ClearSection.scss
@@ -8,6 +8,8 @@
  *  Version:
  *    1.0.0 - 2018/06/05
  */
+@import '~@styles/global';
+
 .c-clear-section {
   width: 100%;
   padding-bottom: 15%;
