Cleaned up Element Scroll Fader a touch, this function can do a lot better though..

--- a/public/objects/animation/fade/ElementScrollFader.scss
+++ b/public/objects/animation/fade/ElementScrollFader.scss
@@ -10,6 +10,8 @@
  *  Version:
  *    1.0.0 - 2018/06/08
  */
+@import '~@styles/global';
+
 $o-element-scroll-fader--speed: 0.75s;
 $o-element-scroll-fader--amount: 15%;
 
