--- a/public/objects/modal/Modal.scss
+++ b/public/objects/modal/Modal.scss
@@ -10,6 +10,7 @@
  *  Version:
  *    1.0.0 - 2018/07/05
  */
+@import '~@styles/global';
 $o-modal--backdrop: rgba(0, 0, 0, 0.7);
 $o-modal--background: white;
 
