--- a/public/objects/video/Video.scss
+++ b/public/objects/video/Video.scss
@@ -10,6 +10,8 @@
  *  Version:
  *    1.0.0 - 2018/05/07
  */
+@import '~@styles/global';
+
 %o-video__media-cover {
   position: absolute;
   top: 0;
