--- a/public/objects/layout/BoxSizer.scss
+++ b/public/objects/layout/BoxSizer.scss
@@ -5,6 +5,7 @@
  *  Version:
  *    1.0.0 - 2018/08/10
  */
+@import '~@styles/global';
 .o-box-sizer {
   width: 100%;
   /* padding-bottom will be set my JS */
