Sorta half ass started cleaning window object.

--- a/public/objects/window/_window95.scss
+++ b/public/objects/window/_window95.scss
@@ -7,7 +7,7 @@
  *  Version:
  *    1.0.0 - 2018/06/24
  */
-
+@import '~@styles/global';
 $o-window--color-background: #C0C0C0;
 $o-window--color-highlight: #0000BF;
 $o-window--color-disabled: #808080;
