--- a/public/styles/common.scss
+++ b/public/styles/common.scss
@@ -42,6 +42,12 @@
 @import './elements/_body.scss';
 @import './elements/_headings.scss';
 
+//TEMP
+@import './objects/_page-transition.scss';
+@import './pages/_contact-page.scss';
+@import './pages/_home-page.scss';
+@import './pages/_privacy-policy-page.scss';
+
 //Utilities
 @import './utilities/text-align.scss';
 
