--- a/public/components/page/boundary/PageBoundary.scss
+++ b/public/components/page/boundary/PageBoundary.scss
@@ -7,6 +7,8 @@
  *  Version:
  *    1.0.0 - 2018/10/23
  */
+@import '~@styles/global';
+
 .c-page-boundary {
   max-width: $s-screen-boundary;
   margin: 0 auto;
