Another attempt to fix the android scaling bug, likely the cause.

--- a/public/components/App.scss
+++ b/public/components/App.scss
@@ -12,4 +12,6 @@
 
 .c-app {
   overflow-x: hidden;//Temporary until I find time to find the overflowing element
+  width: 100vw;
+  min-height: 100vh;
 }
