Further improved minimization of Language and fixed an overflow-x bug

--- a/public/styles/common.scss
+++ b/public/styles/common.scss
@@ -42,6 +42,8 @@
 @import './elements/_body.scss';
 @import './elements/_headings.scss';
 
+@import './elements/#app.scss';
+
 //TEMP
 @import './objects/_page-transition.scss';
 @import './pages/_contact-page.scss';
