--- a/public/components/page/Page.scss
+++ b/public/components/page/Page.scss
@@ -13,6 +13,10 @@
 .c-page {
   flex-grow: 1;
 
+  &.has-background {
+    position: relative;
+  }
+
   &__boundary {
     max-width: $s-screen-boundary;
     margin: 0 auto;
@@ -25,5 +29,13 @@
     &.is-small {
       max-width: $s-screen-boundary / 2;
     }
+  }
+
+  &__background {
+    position: absolute;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
