Messing with the images on the homepage.

--- a/public/styles/settings/colors.scss
+++ b/public/styles/settings/colors.scss
@@ -45,11 +45,11 @@ $s-color--navbar__bar-active: $s-color--pastel-green;
 $s-color--menu__background: rgba(0, 0, 0, 0.8);
 
 //loader
-$s-color--loader: $s-color--swatch-blue;
+$s-color--loader: $s-color--pastel-purple;
 
 //Footer Colors
 $s-color--footer__link: black;
-$s-color--footer__link-hover: white;
+$s-color--footer__link-hover: $s-color--pastel-purple;
 
 /*** Buttons and Inputs ***/
 
