--- a/src/public/styles/settings/animation.scss
+++ b/src/public/styles/settings/animation.scss
@@ -9,4 +9,5 @@ $s-animation--ease-out: $s-animation--ease-out-quart;
 $s-animation--time-fast: 0.2s;
 $s-animation--time-medium: 0.4s;
 $s-animation--time-long: 0.8s;
+$s-animation--time-extended: 2s;
 $s-animation--time-very-long: 4s;
