--- a/src/public/components/page/styles.scss
+++ b/src/public/components/page/styles.scss
@@ -14,8 +14,7 @@
   &__transition {
     //Define the timings, both enter and exit should share timings.
     &-enter,&-exit {
-      transition: 1s $s-animation--ease-in-out;
-
+      transition: all $s-animation--time-extended $s-animation--ease-in-out;
       &-active .c-page__effect { overflow-y: visible; }
     }
 
@@ -25,20 +24,21 @@
 
       &-active {
         transform: translateY(0);
-        .c-page__effect { overflow-y: visible; }
+        .c-page__effect { overflow-y: hidden; }
       }
     }
 
-    /*&-exit {
+    &-exit {
       position: absolute;
       transform: translateY(0%);
       top: 0;
       left: 0;
+      opacity: 1;
 
       &-active {
         transform: translateY(-100vh);
         opacity: 0;
       }
-    }*/
+    }
   }
 }
