--- a/src/partials/layout/layout.html
+++ b/src/partials/layout/layout.html
@@ -11,7 +11,7 @@
   <head>
     <title>domsPlace, Personal Website of Technical Lead Dominic Masters</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <style type="text/css">{{styles}}</style>
   </head>
