--- a/src/partials/layout/layout.css
+++ b/src/partials/layout/layout.css
@@ -12,8 +12,11 @@ html,body {
   font-family: monospace;
 }
 
-a { color: #00F; text-decoration: underline; }
-a:visited,a:active { color: #C0F; }
+a {
+  color: #56C0F1;
+  text-decoration: underline;
+}
+a:visited,a:active { color: #D84DAC; }
 a:hover { text-decoration: none; }
 
 
