--- a/src/partials/layout/layout.css
+++ b/src/partials/layout/layout.css
@@ -7,9 +7,11 @@ html,body {
   margin: 0;
   padding: 0;
   font-size: 16px;
+  line-height: 1.6;
+
   background: #000;
-  color: #FFF;
-  font-family: monospace;
+  color: #DDD;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
